# VINS-Multi-ROS2

./: .gitignore  CMakeLists.txt  README.md  install_ceres_solver.sh  package.xml  setup_script.sh
config/: vins_rviz_config.rviz
config/voxl2_starling2_max/: drone_config.yaml  opencv_tracking_down_calib.yaml  opencv_tracking_front_calib.yaml
config/voxl_starling2_max/: drone_config.yaml  ircam_low_light_down_imu.yaml  opencv_ircam_calib.yaml  opencv_low_light_down_calib.yaml  opencv_tracking_down_calib.yaml  opencv_tracking_front_calib.yaml
include/vins_estimator_ros2/: callback_manager.hpp  camera_pose_visualization.hpp  node.hpp
include/vins_multi_ros2/: callback_manager.hpp  node.hpp
launch/: vins_estimator.launch.py
src/: callback_manager.cpp  camera_pose_visualization.cpp  main.cpp  node.cpp
