<?xml version="1.0"?>
<package format="3">
  <name>vins_multi_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper for the VINS estimator core library.</description>

  <maintainer email="lwangax@connect.ust.hk.com">Luqi Wang</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>vins_estimator</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
